gradle: Remove use of reflection for ProjectBuilder.builder().build() JDK17