@@ -19,14 +19,24 @@ dependencies {
         // Define dependency versions as constraints
         implementation 'org.apache.commons:commons-text:1.9'
 
-        implementation 'org.codehaus.groovy:groovy-all:3.0.10'
+        implementation 'org.codehaus.groovy:groovy-all:3.0.13'
     }
 
     // Use the latest Groovy version for building this library
     implementation 'org.codehaus.groovy:groovy-all'
 }
 
+// 解决jdk17 问题  gradle-tasks模块 GreetingTaskTest 报错
+// 参考 https://github.com/gradle/gradle/issues/22317
+// org.gradle.api.GradleException: Could not inject synthetic classes.
+// Caused by: java.lang.IllegalAccessException: module java.base does not open java.lang to unnamed module @3e07d849
+tasks.withType(Test).configureEach {
+    if(javaVersion > JavaVersion.VERSION_1_8)
+        jvmArgs('--add-opens=java.base/java.lang=ALL-UNNAMED')
+}
+
 testing {
+
     suites {
         // Configure the built-in test suite
         test {
